<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.example.android.notificationscheduler.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Latihan Jadwal Notifikasi"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pilih_jenis_jaringan"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <RadioGroup
        android:id="@+id/Opsijaringan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <RadioButton
            android:id="@+id/tidakNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_adajaringan"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/mobileNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_network"/>
        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_network" />
    </RadioGroup>
<!-- Menu 2 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <Switch
            android:id="@+id/Switchnyala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tetap_menyala"/>
        <Switch
            android:id="@+id/Switchcharger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membutuhkan_charger"/>
    </LinearLayout>
<!-- Menu 3-->
    <Switch
        android:id="@+id/periodicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periode"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batas_akhir"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        <TextView
            android:id="@+id/seekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_diatur"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="35dp"
        android:background="#55C159"
        android:textColor="#ffffff"
        android:text="@string/jadwalkan"/>
s
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:background="#FF9800"
        android:layout_toRightOf="@id/btn_job"
        android:textColor="#FFFFFF"
        android:text="@string/batalkan"/>
    </RelativeLayout>
</LinearLayout>
